<resources>
    <string name="app_name">WhereYouAt</string>
    <string name="retype">Retype Pass</string>
    <string name="confirm">Confirm Pass: </string>
    <string name="passMin"> Six Chars Min</string>
    <string name="password">Password: </string>
    <string name="username">Phone Number:</string>
    <string name="emailHint">Type Email</string>
    <string name="email">Email: </string>
    <string name="usernameHint">10 digit Number</string>
    <string name="usernameLog">Username</string>
    <string name="reset_password"><u>RESET PASSWORD</u></string>
    <string name="sendReq">Send request to?</string>
    <string name="sendReqButton">Select user</string>
    <string name="notification_text">Someone on WhereYouAt Wants to know your location</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="gmail">"@gmail.com"</string>
</resources>
