<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uco.tlawyer.whereyouat.RegisterUserActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="10">

        <TextView
            android:id="@+id/TextViewNumber2"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:layout_row="0"
            android:text="@string/number"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/EditTextNumber2"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:layout_row="0"
            android:hint="@string/numberMin"
            android:inputType="number"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/TextViewUsername2"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:layout_row="1"
            android:text="@string/username"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/EditTextUsername2"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:hint="@string/usernameHint"
            android:layout_row="1"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>


        <TextView
            android:id="@+id/TextViewPassword2"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:layout_row="2"
            android:text="@string/password"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>


        <EditText
            android:id="@+id/EditTextPassword2"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:layout_row="2"
            android:hint="@string/passMin"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/TextViewConfirmPassword"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:text="@string/confirm"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>


        <EditText
            android:id="@+id/EditTextConfirmPassword"
            android:layout_column="1"
            android:layout_columnWeight="0"
            android:layout_marginTop="20dp"
            android:layout_row="3"
            android:hint="@string/retype"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textColor="#000000"/>
    </GridLayout>


</LinearLayout>



